Listado de Empresas: Mayor monto de una Empresa

--- a/src/app/components/empresas-item/empresas-item.component.html
+++ b/src/app/components/empresas-item/empresas-item.component.html
@@ -1,4 +1,4 @@
-<td>{{empresa}}</td>
-<td>${{total}}</td>
-<td>${{comision}}</td>
+<td>{{empresa.nombre}}</td>
+<td>${{empresa.ventas}}</td>
+<td>${{empresa.comision}}</td>
 <td><a href="">Ver Detalle</a></td>
