Empresas Listado: Implementado Mes de mayor Ventas

--- a/src/app/components/empresas-list/empresas-list.component.html
+++ b/src/app/components/empresas-list/empresas-list.component.html
@@ -9,7 +9,7 @@
           <div class="card mx-auto text-center" style="width: 18rem;">
             <div class="card-body">
                 <h5 class="card-title">MES MAS VENTAS</h5>
-                <h5 class="card-title">ENERO</h5>
+                <h5 class="card-title">{{mes}}</h5>
             </div>
           </div>
     </div>
